[tool.poetry]
name = "go-trader"
version = "0.1.0"
description = "Bollinger Bands and ML"
authors = ["Jonathan <jonathan.hilgart@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
tqdm = "^4.62.1"
pyyaml = "^5.4.1"
click = "^8.0.1"
pandas = "1.3.0"
darts = "0.13.1"
finta = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
isort = "^5.9.3"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
pytest-env = "^0.6.2"
types-PyYAML = "^5.4.12"
jupyterlab = "^3.2.4"
ipython = "^7.29.0"
ipykernel = "^6.5.1"
coverage = "^6.1.2"
ccxt = "^1.77.11"
mypy = "^0.942"
black = "^22.3.0"

[tool.pytest.ini_options]
env = ["ON_LOCAL=true"]

[tool.black]
line-length=120
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.mypy]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
